Fixed spacing on Landing Page

--- a/src/Components/Pages/LandingPage/LandingPage.module.css
+++ b/src/Components/Pages/LandingPage/LandingPage.module.css
@@ -19,8 +19,7 @@
 }
 
 .card {
-	width: 80vw;
-
+	width: clamp(1rem, 1000px, 1000px);
 }
 
 .img {
